# Hickory

./: .gitignore  .gitmodules  CONTRIBUTING.md  Hickory.cabal  LICENSE  NOTES  Readme.md  cabal.config  cabal.project  check.sh  freecell.prof  hie.yaml  inst.rb  package.yaml  parseCheck.hs  stack.yaml
.github/workflows/: windows.yaml
Bootstrap/: Bootstrap.hs
Camera/: Camera.hs
Components/Component/: Component.hs  Model.hs
Engine/: CompUtils.hs  Component.hs  Entity.hs  Event.hs  GameContext.hs  Input.hs  Model.hs  Run.hs  Scene.hs  System.hs  World.hs
Engine/Component/: CompUtils.hs  Component.hs  Entity.hs  Model.hs
Engine/Scene/: Input.hs  Run.hs  Scene.hs
Example/: .gitignore  Rakefile
Example/Freecell/: .gitignore  Rakefile
Example/Freecell/resources/Shaders/: ParticleShader.vsh
Example/Freecell/src/: Configuration.hs  main.hs
Example/Freecell/src/Context/: Game.hs
Example/Freecell/src/Freecell/: Utils.hs
Example/Freecell/src/Systems/: FreeCellGame.hs  FreeCellMenu.hs
Example/HFreecell/: Freecell.cabal  LICENSE
Example/HFreecell/resources/Shaders/: PerVertColor.vsh
Example/HFreecell/src/: main.hs
Example/HFreecell/src/Freecell/: Component.hs  Events.hs  Game.hs  GameScene.hs  MenuScene.hs  Render.hs  Utils.hs
Example/HFreecell/src/Freecell/Context/: Game.hs  GameContext.hs
Example/HFreecell/src/Freecell/Systems/: Draw.hs  Game.hs  Menu.hs
Example/Shooter/: Shooter.cabal  fontinfo.md  hie.yaml  package.yaml  shooter.hs  shooter1.hs  shooter2.hs  shooter3.hs  shooterRxt.hs  stack.yaml
Example/Shooter/assets/fonts/: gidolinya.fnt  gidolinya.json
Example/Shooter/resources/Shaders/: PerVertColor.fsh  PerVertColor.vsh  Shader.vsh  SolidColor.fsh
Example/Shooter/src/: main.hs
Example/Showcase/: Showcase.cabal  package.yaml  showcase.hs
Example/fc/resources/Shaders/: ParticleShader.fsh  Shader.fsh
Example/fc/resources/fonts/: goudy_bookletter_1911.fnt
Example/fc/src/Freecell/: Utils.hs
Example/resources/Shaders/: PerVertColor.vsh  Shader.vsh
Example/src/: main.hs
Example/src/Context/: Game.hs
Example/src/Systems/: Simple.hs
FRP/: Hickory-FRP.cabal  package.yaml
FRP/Hickory/: FRP.hs
FRP/Hickory/FRP/: Camera.hs  Combinators.hs  CoreEvents.hs  DearImGUIHelpers.hs  Editor.hs  Game.hs  Historical.hs  UI.hs
FRP/Hickory/FRP/Camera/: FirstPerson.hs  Omniscient.hs  Types.hs
FRP/Hickory/FRP/Editor/: GUI.hs  General.hs  Network.hs  Post.hs  (+2 more)
GLFW/: Hickory-GLFW.cabal  Run.hs  main.hs  package.yaml
GLFW/GLFW/: Platform.hs  Run.hs  Utils.hs
GLInterface/: GLSupport.hs
Graphics/: Animation.hs  DrawText.hs  DrawUtils.hs  Drawing.hs  GLFWUtils.hs  GLSupport.hs  GLUtils.hs  Shader.hs
Hickory/: Camera.hs  Color.hs  FRP.hs  Graphics.hs  Input.hs  Platform.hs  Types.hs
Hickory/Graphics/: Animation.hs  Debug.hs  DeferredRendering.hs  DirectXModel.hs  DrawText.hs  DrawUtils.hs  Drawing.hs  GLSupport.hs  MatrixMonad.hs  SSAO.hs  Shader.hs  ShaderMonad.hs  StockShaders.hs  Textures.hs  Types.hs  Uniforms.hs  VAO.hs  Wavefront.hs
Hickory/Math/: Interpolate.hs  Matrix.hs  Vector.hs  VectorMatrix.hs
Hickory/Text/: Font.hs  Text.hs
Hickory/Utils/: Bvh.hs  DirectX.hs  Layer.hs  Obj.hs  Parsing.hs  Projection.hs  Resources.hs  Utils.hs
ImGUI/: Hickory-ImGUI.cabal  package.yaml
ImGUI/Hickory/GUI/: GUI.hs  Network.hs  Post.hs
ImGUI/Hickory/ImGUI/: Helpers.hs  ImGUI.hs  SDL.hs
Layer/: Layer.hs  Utils.hs
Math/: Interpolate.hs  Matrix.hs  Vector.hs  VectorMatrix.hs  linmath.c
Menus/: Construction.hs  Menus.hs
Platform/: Common.hs  iPhone.hs
React/: React.hs
SDL/: Hickory-SDL.cabal  LICENSE  package.yaml
SDL3/: Hickory-SDL3.cabal  package.yaml
Systems/: Camera.hs  Draw.hs  DrawState.hs  DrawText.hs  FPSCounter.hs  GLFWPlatform.hs  Input.hs  Menus.hs  Platform.hs  Textures.hs  UICamera.hs  WorldCamera.hs
Text/: Font.hs  Text.hs
Textures/: GLLoad.hs  Textures.hs
Types/: Color.hs  Types.hs
UI/: Elements.hs  Stack.hs
Utils/: Bvh.hs  HashMap.hs  Obj.hs  Parsing.hs  Projection.hs  Resources.hs  System.hs  Utils.hs
c/: drawing.c  platform.c  renderer.c  shaderprogram.c
core/: Hickory.cabal  Readme.md  package.yaml
core/Hickory/: Camera.hs  Color.hs  Config.hs  DearImGUIHelpers.hs  Editor.hs  GameLoop.hs  Graphics.hs  Input.hs  Math.hs  Platform.hs  Resources.hs  Text.hs  Types.hs
core/Hickory/Camera/: Omniscient.hs
core/Hickory/Editor/: GUI.hs  General.hs  Types.hs  View.hs
core/Hickory/Graphics/: Animation.hs  Debug.hs  DeferredRendering.hs  DrawText.hs  DrawUtils.hs  Drawing.hs  Framebuffer.hs  GLSupport.hs  MatrixMonad.hs  Mesh.hs  Shader.hs  StockShaders.hs  Textures.hs  VAO.hs
core/Hickory/ImGUI/: Helpers.hs  ImGUI.hs
core/Hickory/Math/: Bezier.hs  Interpolate.hs  Matrix.hs  Vector.hs  VectorMatrix.hs
core/Hickory/ModelLoading/: Animation.hs  Bvh.hs  DirectX.hs  DirectXModel.hs  Packed.hs  Parsing.hs  Wavefront.hs
core/Hickory/Text/: Font.hs  ParseFnt.hs  ParseJson.hs  Text.hs  Types.hs
core/Hickory/Utils/: Bvh.hs  HashMap.hs  Projection.hs  Utils.hs
core/Hickory/Vulkan/: DescriptorSet.hs  DynamicMesh.hs  ForwardRenderTarget.hs  Frame.hs  Framing.hs  Instance.hs  Material.hs  Mesh.hs  Monad.hs  ObjectPicking.hs  OffscreenTarget.hs  PostProcessing.hs  RenderPass.hs  RenderTarget.hs  StockMesh.hs  StockTexture.hs  Text.hs  Textures.hs  Types.hs  Utils.hs  Vulkan.hs
core/pack-model/: main.hs
core/test/: Main.hs
docs/: directx_import.md
iOS/: Hickory-iOS.cabal  LICENSE
iOS/IOS/: Run.hs  Utils.hs
iOS/integration/: GameViewController.h  GameViewController.m  iosmain.hs  main.m
include/: defs.h  drawing.h  linmath.h  platform.h  renderer.h  shaderprogram.h
profiling/: freecell
small/: Small.cabal  package.yaml
small/Small/: Foo.hs  QQ.hs
small/hackory/: Hackory.cabal  LICENSE  package.yaml
small/hackory/Hickory/: Camera.hs  Editor.hs  GameLoop.hs  ImGUI.hs  Math.hs  Relative.hs  Resources.hs  Serialize.hs  Text.hs  Types.hs  UI.hs
small/hackory/pack-model/: main.hs
small/small-dep/: SmallDep.cabal  package.yaml
small/small-dep/SmallDep/: Foo.hs
test/: Main.hs
(+74 files in other folders)
