name:                Hickory

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1

-- A short (one-line) description of the package.
synopsis:            A practical game engine based on Entity Systems

-- A longer description of the package.
-- description:         

-- URL for the project homepage or repository.
homepage:            https://github.com/asivitz/Hickory

license:             MIT
license-file:        LICENSE
author:              Axis Sivitz

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          axis@asivitz.com

-- A copyright notice.
-- copyright:           

category:            Game
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  Readme.md

cabal-version:       >=1.10

library
  exposed-modules:     Camera.Camera, Engine.Scene.Run, Graphics.Drawing, Graphics.DrawText, Graphics.GLUtils, Math.Matrix, Math.Vector, Math.VectorMatrix, Menus.Construction, Menus.Menus, Systems.Textures, Systems.Draw, Systems.DrawText, Text.Font, Types.Color, Types.Types, Utils.Resources, Utils.Utils, Utils.HashMap, Platform.IPhone, Engine.Scene.Input, Engine.Scene.Scene, Utils.Projection
  other-extensions:    NamedFieldPuns, TemplateHaskell, Rank2Types, BangPatterns, OverloadedStrings
  build-depends:       base >=4.7 && <4.8, parsec <= 3.1.5, unordered-containers >=0.2 && <0.3, containers >=0.5 && <0.6, hashable >=1.2 && <1.3, time >=1.4 && <1.5, mtl >=2.2 && <2.3, OpenGLRaw >=1.5 && <1.6, text >=1.1 && <1.2, AC-Vector >=2.3 && <2.4, array >=0.5 && <0.6, pngload-fixed >=1.0 && <1.1, attoparsec >=0.12 && <0.13
  default-language:    Haskell2010
  c-sources: c/drawing.c c/platform.c c/shaderprogram.c c/renderer.c Math/linmath.c
  include-dirs: include/
  ghc-prof-options:   -fprof-auto
  ghc-options: -Wall -fno-warn-unused-matches -fno-warn-missing-signatures -fno-warn-unused-do-bind
