name:                Hickory

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1

-- A short (one-line) description of the package.
synopsis:            A practical game engine based on Entity Systems

-- A longer description of the package.
-- description:         

-- URL for the project homepage or repository.
homepage:            https://github.com/asivitz/Hickory

license:             MIT
license-file:        LICENSE
author:              Axis Sivitz

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          axis@asivitz.com

-- A copyright notice.
-- copyright:           

category:            Game
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  Readme.md

cabal-version:       >=1.10

Flag Ios
  Description: Build for IOS. Use OpenGLES2 functions instead of standard OpenGL
  Default:     False

library
  exposed-modules:     Camera.Camera, Engine.Scene.Run, Graphics.Drawing, Graphics.DrawText, Graphics.GLUtils, Math.Matrix, Math.Vector, Math.VectorMatrix, UI.Stack, UI.Elements, Textures.Textures, Graphics.DrawUtils, Text.Text, Text.Font, Types.Color, Types.Types, Utils.Resources, Utils.Utils, Utils.HashMap, Platform.IPhone, Engine.Scene.Input, Engine.Scene.Scene, Utils.Projection, Graphics.Shader, React.React, Layer.Layer, Math.Interpolate, Utils.BVH
  other-extensions:    NamedFieldPuns, TemplateHaskell, Rank2Types, BangPatterns, OverloadedStrings
  build-depends:       base >= 4.7 && < 5, parsec <= 3.1.9, unordered-containers >=0.2 && <0.3, containers >=0.5 && <0.6, hashable >=1.2 && <1.3, time >=1.5 && <1.6, mtl >=2.2 && <2.3, OpenGLRaw >=1.5 && <1.6, text >=1.2 && <1.3, AC-Vector >=2.3 && <2.4, array >=0.5 && <0.6, attoparsec >=0.12 && <0.13, JuicyPixels >= 3.1.7.1, vector, cereal, GenericPretty, pretty, microlens, microlens-th, megaparsec, linear
  default-language:    Haskell2010
  c-sources: c/drawing.c c/platform.c c/shaderprogram.c c/renderer.c Math/linmath.c
  include-dirs: include/
  ghc-prof-options:   -fprof-auto
  ghc-options: -Wall -fno-warn-unused-matches -fno-warn-missing-signatures -fno-warn-unused-do-bind
-- Needed for cross compilation
  if os(osx)
    cc-options:         -F/System/Library/Frameworks
  if flag(ios)
    cc-options: -DTARGET_OS_IPHONE

Test-Suite hickory-test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  build-depends:      base >=4.7 && <5,
                      test-framework,
                      test-framework-hunit,
                      HUnit,
                      HUnit-approx >= 1.0,
                      Hickory,
                      containers >= 0.5 && < 0.6
