name:                Hickory-iOS

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1

-- A short (one-line) description of the package.
synopsis:            iOS utils for Hickory

-- A longer description of the package.
-- description:         

-- URL for the project homepage or repository.
-- homepage:            https://github.com/asivitz/Hickory

license:             MIT
license-file:        LICENSE
author:              Axis Sivitz

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          axis@asivitz.com

-- A copyright notice.
-- copyright:           

category:            Game
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  Readme.md

cabal-version:       >=1.10

library
  exposed-modules:     Platforms.IOS
  other-extensions:    NamedFieldPuns, Rank2Types, BangPatterns, OverloadedStrings
  build-depends:       base >=4.7 && <5, OpenGLRaw >=1.5 && <1.6, time, unordered-containers >=0.2 && <0.3, Hickory
  default-language:    Haskell2010
  ghc-prof-options:   -fprof-auto
  ghc-options: -Wall -fno-warn-unused-matches -fno-warn-missing-signatures -fno-warn-unused-do-bind
