name:                Shooter

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1

-- A short (one-line) description of the package.
synopsis:            An example action game

-- A longer description of the package.
-- description:         

-- URL for the project homepage or repository.
homepage:            https://github.com/asivitz/Hickory

license:             MIT
author:              Axis Sivitz

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          axis@asivitz.com

-- A copyright notice.
-- copyright:           

category:            Game
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  Readme.md

cabal-version:       >=1.10

executable shooter
  default-language:    Haskell2010
  main-is:         shooter.hs
  other-extensions:    NamedFieldPuns, TemplateHaskell, Rank2Types, BangPatterns, OverloadedStrings
  build-depends:       base, Hickory, layer, linear, OpenGLRaw == 3.2.1.0, random, Hickory-GLFW, GLFW-b >= 1.4 && < 1.5, cereal, bytestring, time, lens
  ghc-options: -rtsopts -Wall -fno-warn-unused-matches -fno-warn-missing-signatures -fno-warn-unused-do-bind
  ghc-prof-options: -fprof-auto
